# cuda-blur-demo

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  run.bat  run.sh
.github/workflows/: build.yml
cpu/: CMakeLists.txt
cuda/: CMakeLists.txt  blur.h  main.cpp
opencl/: CMakeLists.txt  blur.cpp  bmp.h  main.cpp
scripts/: build.bat  build_all.bat  cmake_config.bat  do_cmake.bat  run_comparison.bat
src/: blur.h  blur_cpu.cpp  main.cpp
src/cpu/: CMakeLists.txt  blur.cpp  blur.h  bmp.cpp  main.cpp
src/cuda/: CMakeLists.txt  blur.cu  blur.h  main.cpp
src/opencl/: CMakeLists.txt  blur.cl  blur.cpp  blur.h  main.cpp
src/shared/: CMakeLists.txt  bmp.cpp  bmp.h
